src/Standard/Standard_CLocaleSentry.cxx
@@ -19,6 +19,8 @@
 
 #include <cstring>
 
+#if !defined(__ANDROID__)
+
 namespace
 {
 
@@ -79,9 +81,10 @@ Standard_CLocaleSentry::Standard_CLocaleSentry()
 #endif
 #endif
 {
-#ifndef HAVE_XLOCALE_H
+#if !defined(HAVE_XLOCALE_H)
   const char* aPrevLocale = (const char* )myPrevLocale;
-  if (aPrevLocale[0] == 'C' && aPrevLocale[1] == '\0')
+  if (myPrevLocale == NULL
+   || (aPrevLocale[0] == 'C' && aPrevLocale[1] == '\0'))
   {
     myPrevLocale = NULL; // already C locale
     return;
@@ -101,7 +104,7 @@ Standard_CLocaleSentry::Standard_CLocaleSentry()
 // =======================================================================
 Standard_CLocaleSentry::~Standard_CLocaleSentry()
 {
-#ifdef HAVE_XLOCALE_H
+#if defined(HAVE_XLOCALE_H)
   uselocale ((locale_t )myPrevLocale);
 #else
   if (myPrevLocale != NULL)
@@ -118,3 +121,5 @@ Standard_CLocaleSentry::~Standard_CLocaleSentry()
 #endif
 #endif
 }
+
+#endif // __ANDROID__
